Fixed overflow and changed default filter to pending orders

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,10 @@ html, body, #__next, main {
   width: 100%;
 }
 
+#__next {
+  overflow: hidden;
+}
+
 * {
   font-family: 'Montserrat', sans-serif;
   user-select: none;
